// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package protobuf.contrib.immutablejs.protos;

option java_multiple_files = true;

message TestProto3Optional {
  optional int32 optional_int = 1;
}

message TestProto3 {
  bool proto3_bool = 1;
  string proto3_string = 2;
  float proto3_float = 3;
  double proto3_double = 4;
  int32 proto3_int32 = 5;
  uint32 proto3_uint32 = 6;
  int64 proto3_long = 7 [jstype = JS_STRING];
  int64 proto3_int52long = 8;
  bytes proto3_bytes = 9;
  repeated bool proto3_plural_bool = 12;

  enum TestEnum {
    UNKNOWN = 0;
    ONE = 1;
    TWO = 2;
  }

  TestEnum proto3_enum = 10;

  message NestedMessage {
    optional string payload = 1;
  }
  NestedMessage proto3_message = 11;
}
