// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package protobuf.contrib.j2cl.protos;

import "java/com/google/protobuf/contrib/j2cl/options.proto";

option java_package = "com.google.protobuf.contrib.j2cl.protos";

// REMOVED_BY_GENRULE option java_multiple_files = true;

message Proto3EnumTestProto {
  Proto3TestEnum optional_enum = 1;
  repeated Proto3TestEnum repeated_enum = 2;
  Proto3NativeEnum optional_native_enum = 3;
  repeated Proto3NativeEnum repeated_native_enum = 4;

  enum Proto3TestEnum {
    DEFAULT = 0;
    ONE = 1;
    TWO = 2;
    THREE = 3;
  }

  enum Proto3SparseEnum {
    SPARSE_DEFAULT = 0;
    SPARSE_TEN = 10;
    SPARSE_TWENTY = 20;
  }

  enum Proto3NativeEnum {
    option (.j2cl.enum_options).generate_js_enum = true;

    NATIVE_DEFAULT = 0;
    NATIVE_ONE = 1;
    NATIVE_TWO = 2;
    NATIVE_THREE = 3;
  }
}
